--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
   "main": "server.js",
   "scripts": {
     "start": "node backend/server",
+    "server": "nodemon backend/server",
+    "client": "npm run dev --prefix frontend",
+    "serve": "concurrently \" npm run server \" \"npm run client \"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Wizli Abdessalam",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.0.1"
   }
 }
