--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node backend/server",
-    "server": "nodemon backend/server",
+    "server": "nodemon -r dotenv/config backend/server.js ",
     "client": "npm run dev --prefix frontend",
     "serve": "concurrently \" npm run server \" \"npm run client \"",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +14,8 @@
   "author": "Wizli Abdessalam",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
