--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-PORT=<<YOUR_PORT>>
-MONGO_URI=<<YOUR_MONGO_URI>>
-JWT_SECRET=<<your_secret>>
+PORT=<< YOUR_PORT >>
+MONGO_URI=<< YOUR_MONGO_URI >>
+JWT_SECRET=<< your_secret >>
+PAYPAL_CLIENT_ID=<< paypal_client_id  >>
