--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Wizli Abdessalam",
   "license": "MIT",
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.1.3",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
