--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "license": "MIT",
   "dependencies": {
     "@paypal/react-paypal-js": "^8.1.3",
+    "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
+    "cmi-payment-nodejs": "^1.1.3",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -29,7 +31,8 @@
     "mongoose": "^8.0.1",
     "multer": "^1.4.5-lts.1",
     "yargs": "^17.7.2",
-    "yargs-parser": "^21.1.1"
+    "yargs-parser": "^21.1.1",
+    "youcan-payment-nodejs-sdk": "^1.2.8"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
