--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.19.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "react-whatsapp": "^0.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
