--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,13 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.0-alpha1",
     "crypto-js": "^4.2.0",
+    "i18next": "^23.7.16",
+    "i18next-browser-languagedetector": "^7.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.3",
+    "react-i18next": "^14.0.0",
     "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.19.0",
