--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,8 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.19.0",
     "react-toastify": "^9.1.3",
-    "react-whatsapp": "^0.3.0"
+    "react-whatsapp": "^0.3.0",
+    "the_shop": "file:.."
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
