--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "multer": "^1.4.5-lts.1",
+    "vite": "^5.0.11",
     "yargs": "^17.7.2",
     "yargs-parser": "^21.1.1",
     "youcan-payment-nodejs-sdk": "^1.2.8"
