--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,9 +28,8 @@
     "react-router-dom": "^6.19.0",
     "react-toastify": "^9.1.3",
     "react-whatsapp": "^0.3.0",
-    "the_shop": "file:.."
-  },
-  "devDependencies": {
+    "the_shop": "file:..",
+    "vite-plugin-eslint": "^1.8.1",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
@@ -40,5 +39,6 @@
     "eslint-plugin-react-refresh": "^0.4.4",
     "vite": "^5.0.0",
     "vite-plugin-proxy": "^0.5.0"
-  }
+  },
+  "devDependencies": {}
 }
