--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "vite",
     "server": "nodemon -r dotenv/config backend/server.js ",
-    "client": "npm start --prefix frontend",
+    "client": "npm run dev --prefix frontend",
     "serve": "concurrently \" npm run server \" \"npm run client \"",
     "seeder": "node backend/seeder.js ",
     "data:destroy": "node backend/seeder.js -d ",
@@ -23,6 +23,7 @@
     "bcryptjs": "^2.4.3",
     "cmi-payment-nodejs": "^1.1.3",
     "colors": "^1.4.0",
+    "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -31,13 +32,12 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.8",
+    "nodemon": "^3.0.1",
     "vite": "^5.0.11",
+    "vite-plugin-eslint": "^1.8.1",
     "yargs": "^17.7.2",
     "yargs-parser": "^21.1.1",
-    "youcan-payment-nodejs-sdk": "^1.2.8",
-    "vite-plugin-eslint": "^1.8.1",
-    "concurrently": "^8.2.2",
-    "nodemon": "^3.0.1"
-  },
-  "devDependencies": {}
+    "youcan-payment-nodejs-sdk": "^1.2.8"
+  }
 }
