--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-list-endpoints": "^6.0.0",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.1",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
     "vite": "^5.0.11",
     "vite-plugin-eslint": "^1.8.1",
     "yargs": "^17.7.2",
