--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
-    "react-facebook-login": "^4.1.1",
+    "react-facebook-login": "compatible-version",
     "react-helmet-async": "^2.0.3",
     "react-i18next": "^14.0.0",
     "react-icons": "^4.12.0",
